--- a/tum_simulator/package.xml
+++ b/tum_simulator/package.xml
@@ -9,7 +9,7 @@
   <run_depend>cvg_sim_msgs</run_depend>
   <run_depend>cvg_sim_gazebo</run_depend>
   <run_depend>cvg_sim_gazebo_plugins</run_depend>
-  <run_depend>message_to_tf</run_depend>
+  <run_depend>tum_message_to_tf</run_depend>
 
   <export>
     <metapackage/>
